# 2dengine

./: .gitignore  CMakeLists.txt  README.md  edit_animations.sh  edit_map.sh  edit_sprites.sh  excise-engine.txt  full-run-demo  make_appimage_example.sh  sync_files.sh
dev_scripts/: add_layer.php  count_treasures.php  fill_map_properties.php  fill_missing_properties.php  find_tile.php  find_tile_gaps.php  gather_windows_libs.sh  locate_keys.php  make_resources.sh  ready.sh  reorder_layers.php  replace_tile.php  resources_to_windows.sh  set_unique_ids.php  sync_files.sh  tile_report.php
example/include/app/: automap.h  automap_game.h  automap_reader.h  autopilot.h  autopilot_node.h  background_interface.h  boss.h  boss_map_interface.h  boss_skull.h  boss_skull_spawn.h  breaking_platform.h  button.h  collectible.h  debug.h  definitions.h  entity.h  entry.h  env.h  exit.h  facing_block.h  game_draw.h  game_session.h  gate.h  input.h  inventory.h  ladder.h  leaping_monster.h  linear_monster.h  map.h  map_attribute_loader.h  map_transition.h  map_transition_fade.h  moving_block.h  moving_block_node.h  particle_module_bonus.h  particle_module_breaking_platform.h  particle_module_flame.h  particle_module_pickup.h  particle_module_projectile_horizontal_splash.h  particle_module_projectile_splash.h  (+32 more)
example/include/controller/: controller_states.h  controls.h  credits.h  leave_ending.h  main.h  menu.h  options.h  pause.h  question.h  show_text.h  splash.h  test.h
example/include/dfwimpl/: config.h  state_driver.h
example/linuxdeploy/: app.desktop
example/resources/layout/: main_menu.json  views.json
example/resources/lists/: animations.txt  automap.txt  fonts.txt  music.txt  sounds.txt  textures.txt  tiles.txt  tiles_to_animations.txt
example/resources/maps/: 0_test_map_000.json  0_test_map_001.json  0_test_map_002.json  __map_001.json  __map_002.json  access_001.json  blue_001.json  blue_002.json  blue_003.json  blue_004.json  blue_005.json  blue_006.json  blue_007.json  blue_008.json  blue_009.json  blue_010.json  blue_011.json  blue_012.json  blue_013.json  blue_014.json  blue_015.json  blue_016.json  blue_017.json  blue_018.json  blue_key_001.json  blue_key_002.json  blue_key_003.json  blue_key_004.json  blue_key_005.json  blue_key_006.json  blue_key_007.json  blue_key_008.json  blue_key_009.json  blue_key_010.json  ending_001.json  forest_001.json  forest_002.json  forest_003.json  forest_004.json  forest_005.json  (+190 more)
example/resources/runtime/: config.json  values
example/src/: CMakeLists.txt  app_main.cpp  main.cpp
example/src/app/: CMakeLists.txt  automap.cpp  automap_game.cpp  automap_reader.cpp  autopilot.cpp  autopilot_node.cpp  boss.cpp  boss_skull.cpp  boss_skull_spawn.cpp  breaking_platform.cpp  button.cpp  collectible.cpp  debug.cpp  entity.cpp  entry.cpp  exit.cpp  facing_block.cpp  game_draw.cpp  game_session.cpp  gate.cpp  inventory.cpp  ladder.cpp  leaping_monster.cpp  linear_monster.cpp  map.cpp  map_attribute_loader.cpp  map_transition_fade.cpp  moving_block.cpp  moving_block_node.cpp  particle_module_bonus.cpp  particle_module_breaking_platform.cpp  particle_module_flame.cpp  particle_module_pickup.cpp  particle_module_projectile_horizontal_splash.cpp  particle_module_projectile_splash.cpp  particle_module_smoke.cpp  platform_block.cpp  player.cpp  player_input.cpp  projectile.cpp  (+23 more)
example/src/controller/: CMakeLists.txt  controls.cpp  credits.cpp  leave_ending.cpp  main.cpp  main.debug.cpp  menu.cpp  options.cpp  pause.cpp  question.cpp  show_text.cpp  splash.cpp  test.cpp
example/src/dfwimpl/: CMakeLists.txt  config.cpp  state_driver.cpp
example/tile_editor_integration/: config.txt  default-map.json  logic-tiles.txt  map_properties.txt  scenery_tiles.txt  things.txt
include/d2d/audio/: music_player.h  sound_player.h  sound_player_then.h
include/d2d/collision/: aabb_checker.h  aabb_phase.h  aabb_solver.h  aabb_static_checker.h  checker.h  collision_tracker.h  definitions.h  exception.h  motion_axis_limiter.h  phase.h  phase_horizontal.h  phase_vertical.h  ray_aabb_checker.h  ray_aabb_finder.h  ray_aabb_phase.h  ray_aabb_solver.h  ray_builder.h  shaper.h  shaper_default.h  solver.h  spatiable.h  spatiable_box.h  tile.h  tile_filter.h  tile_finder.h  tile_finder_matrix.h  tile_implementation.h  tile_limits.h  tiles_in_box.h  tools.h
include/d2d/components/: exception.h  particle.h  persistence.h  timeout.h  timeouts.h
include/d2d/engine/: main.h
include/d2d/motion/: accelerator.h  definitions.h  gravity.h  mover.h
lib/: CMakeLists.txt
lib/d2d/: CMakeLists.txt
lib/d2d/audio/: CMakeLists.txt  music_player.cpp  sound_player.cpp  sound_player_then.cpp
lib/d2d/collision/: CMakeLists.txt  aabb_checker.cpp  aabb_phase.cpp  aabb_solver.cpp  aabb_static_checker.cpp  checker.cpp  collision_tracker.cpp  motion_axis_limiter.cpp  phase.cpp  phase_horizontal.cpp  phase_vertical.cpp  ray_aabb_checker.cpp  ray_aabb_finder.cpp  ray_aabb_phase.cpp  ray_aabb_solver.cpp  ray_builder.cpp  shaper.cpp  shaper_default.cpp  solver.cpp  spatiable.cpp  spatiable_box.cpp  tile.cpp  tile_finder.cpp  tile_finder_matrix.cpp  tile_limits.cpp  tiles_in_box.cpp  tools.cpp
lib/d2d/components/: CMakeLists.txt  particle.cpp  timeout.cpp  timeouts.cpp
lib/d2d/engine/: CMakeLists.txt  main.cpp
lib/d2d/motion/: CMakeLists.txt  accelerator.cpp  gravity.cpp  mover.cpp
lib/d2d/storage/: CMakeLists.txt  map_loader.cpp
lib/d2d/video/: CMakeLists.txt  animation_manager.cpp  animation_sprite_finder.cpp  camera_map_limit.cpp  debug_display.cpp  scenery_tile.cpp  scenery_tile_draw.cpp  scenery_tile_draw_animated.cpp  scenery_tile_draw_static.cpp  scenery_tile_query.cpp  sprite_draw.cpp  sprite_draw_animated.cpp  sprite_fill_draw.cpp  spritesheet_manager.cpp  tools.cpp
lib/d2d/world/: CMakeLists.txt  collision_tile.cpp  map.cpp
linuxdeploy/: net.caballorenoir.app.appdata.xml
tests/: aabb_static_checker.cpp  particles.cpp  persistence.cpp  tile_finder_matrix.cpp
windows_tools/: build.sh  build_all.sh  gather_deps.sh  gather_windows_libs.sh  resources_to_windows.sh
(+28 files in other folders)
